--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.gms:play-services:12.0.1'
     // Ar
     implementation 'com.google.ar:core:1.19.0'
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
