--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-auth:19.4.0'
     implementation 'com.google.firebase:firebase-firestore:21.6.0'
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
+
     // Ar
     implementation 'com.google.ar:core:1.19.0'
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
