--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,19 @@ dependencies {
     //Google maps
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    //Nav
+    def nav_version = "2.3.0"
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
 
     //Firebase
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
