--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-feature android:name="android.hardware.camera.ar" android:required="true" />
 
 
     <uses-feature
@@ -32,6 +33,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCtEJ6h5Th2g4nQFqnT3lvqqoRt3m7rflE" />
+
+        <meta-data android:name="com.google.ar.core" android:value="required" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
